# ILA-SCNN

./: README.md  build-notes.txt
tensorflow/core/user_ops/: BUILD  \  copyright.txt  custom_bzl.bzl  direct_sparse_approx_conv_kd.cc  direct_sparse_approx_conv_kd_gpu.cu.cc  direct_sparse_approx_conv_kd_gpu.h  direct_sparse_concat.cc  direct_sparse_concat_gpu.cu.cc  direct_sparse_concat_gpu.h  direct_sparse_conv_kd.cc  direct_sparse_conv_kd_gpu.cu.cc  direct_sparse_conv_kd_gpu.h  direct_sparse_conversions.cc  direct_sparse_conversions_gpu.cu.cc  direct_sparse_conversions_gpu.h  direct_sparse_cuda_helpers_gpu.h  direct_sparse_cwise_biased_reg.cc  direct_sparse_cwise_biased_reg_gpu.cu.cc  direct_sparse_cwise_biased_reg_gpu.h  direct_sparse_cwise_regularizers.py  direct_sparse_grad_ops.py  direct_sparse_layer_definition.py  direct_sparse_module.py  direct_sparse_pooling_kd.cc  direct_sparse_pooling_kd_gpu.cu.cc  direct_sparse_pooling_kd_gpu.h  direct_sparse_regularizers.py  direct_sparse_to_dense.cc  direct_sparse_to_dense_gpu.cu.cc  direct_sparse_to_dense_gpu.h  direct_sparse_to_dense_op.cc  direct_sparse_to_dense_op_grad.cc  evaluate_confusion_matrix.cc  hash_map.h  merge_sort.h  sparse_layer_definition.py  (+22 more)
tensorflow/core/user_ops/parallelization_method_test/: CMakeLists.txt  evaluate_parallel_conv_cpu.m  generic_matrix_txt_io.h  hash_map.h  indexing.h  kd_map.cpp  merge_sort.cpp  merge_sort.h  rnd_matrix.h  vote3d_conv.h
tensorflow/core/user_ops/parallelization_method_test/time/: time.cpp
tensorflow/core/user_ops/parallelization_method_test/time/time/: time.h
(+85 files in other folders)
